[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/App.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Options.gd" type="Script" id=2]
[ext_resource path="res://Fonts/GugiOptions.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/SaveButtons.gd" type="Script" id=4]
[ext_resource path="res://Sprites/testText.png" type="Texture" id=5]
[ext_resource path="res://Scenes/SaveName.gd" type="Script" id=6]
[ext_resource path="res://Scenes/AdditionalOptions.gd" type="Script" id=7]
[ext_resource path="res://Scenes/LoadButtons.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Load.gd" type="Script" id=9]
[ext_resource path="res://Scenes/DeleteButton.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Tween.gd" type="Script" id=11]
[ext_resource path="res://Scenes/ColorButtons.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Color.gd" type="Script" id=13]
[ext_resource path="res://Scenes/RowCounter.gd" type="Script" id=14]
[ext_resource path="res://Fonts/ResetFont.tres" type="DynamicFont" id=15]
[ext_resource path="res://Scenes/PerDisplay.gd" type="Script" id=16]
[ext_resource path="res://Scenes/RowDisplay.gd" type="Script" id=17]
[ext_resource path="res://Scenes/Progress.gd" type="Script" id=18]
[ext_resource path="res://Scenes/StitchDisplay.gd" type="Script" id=19]
[ext_resource path="res://Fonts/GugiStitchDisplay.tres" type="DynamicFont" id=20]
[ext_resource path="res://Fonts/GugiButtons.tres" type="DynamicFont" id=21]
[ext_resource path="res://Scenes/Reset.gd" type="Script" id=22]
[ext_resource path="res://Scenes/ResetButton.gd" type="Script" id=23]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 150, 50 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 150, 50 )
margin_left = 5.0

[node name="App" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]
z_index = -2

[node name="BackgroundRectangle" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.854902, 0.854902, 0.854902, 1 )

[node name="Options" type="Node2D" parent="."]
z_index = 2
script = ExtResource( 2 )

[node name="OptionsButton" type="TextureButton" parent="Options"]
margin_right = 150.0
margin_bottom = 50.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/OptionsButton"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Options"
align = 1
valign = 1

[node name="SaveButtons" type="Node2D" parent="Options"]
position = Vector2( 50, 0 )
script = ExtResource( 4 )

[node name="SaveName" type="LineEdit" parent="Options/SaveButtons"]
margin_left = 576.0
margin_right = 796.0
margin_bottom = 50.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/selection_color = Color( 0, 0, 0, 0 )
custom_colors/cursor_color = Color( 0.505882, 0.505882, 0.505882, 1 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
max_length = 10
placeholder_text = "Save Name?"
placeholder_alpha = 1.0
caret_blink = true
script = ExtResource( 6 )

[node name="Tween" type="Tween" parent="Options/SaveButtons"]

[node name="AdditionalOptions" type="Node2D" parent="Options"]
position = Vector2( -200, 0 )
script = ExtResource( 7 )

[node name="SaveButton" type="TextureButton" parent="Options/AdditionalOptions"]
editor/display_folded = true
margin_top = 50.0
margin_right = 150.0
margin_bottom = 100.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/AdditionalOptions/SaveButton"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Save"
valign = 1

[node name="LoadButton" type="TextureButton" parent="Options/AdditionalOptions"]
editor/display_folded = true
margin_top = 100.0
margin_right = 150.0
margin_bottom = 150.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/AdditionalOptions/LoadButton"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Load"
valign = 1

[node name="ColorButton" type="TextureButton" parent="Options/AdditionalOptions"]
margin_top = 150.0
margin_right = 150.0
margin_bottom = 200.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/AdditionalOptions/ColorButton"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Color"
valign = 1

[node name="RowCounterButton" type="TextureButton" parent="Options/AdditionalOptions"]
margin_top = 200.0
margin_right = 174.0
margin_bottom = 250.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/AdditionalOptions/RowCounterButton"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Row Count"
valign = 1

[node name="Tween" type="Tween" parent="Options/AdditionalOptions"]

[node name="LoadButtons" type="Node2D" parent="Options"]
editor/display_folded = true
position = Vector2( 50, 50 )
script = ExtResource( 8 )

[node name="Load1" type="TextureButton" parent="Options/LoadButtons"]
editor/display_folded = true
margin_left = 576.0
margin_top = 50.0
margin_right = 726.0
margin_bottom = 100.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/LoadButtons/Load1"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Save"
valign = 1

[node name="Load2" type="TextureButton" parent="Options/LoadButtons"]
editor/display_folded = true
margin_left = 576.0
margin_top = 100.0
margin_right = 726.0
margin_bottom = 150.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
index = 1

[node name="Label" type="Label" parent="Options/LoadButtons/Load2"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Save"
valign = 1

[node name="Load3" type="TextureButton" parent="Options/LoadButtons"]
editor/display_folded = true
margin_left = 576.0
margin_top = 150.0
margin_right = 726.0
margin_bottom = 200.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
index = 2

[node name="Label" type="Label" parent="Options/LoadButtons/Load3"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Save"
valign = 1

[node name="Load4" type="TextureButton" parent="Options/LoadButtons"]
editor/display_folded = true
margin_left = 576.0
margin_top = 200.0
margin_right = 726.0
margin_bottom = 250.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
index = 3

[node name="Label" type="Label" parent="Options/LoadButtons/Load4"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Save"
valign = 1

[node name="Load5" type="TextureButton" parent="Options/LoadButtons"]
editor/display_folded = true
margin_left = 576.0
margin_top = 250.0
margin_right = 726.0
margin_bottom = 300.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
index = 4

[node name="Label" type="Label" parent="Options/LoadButtons/Load5"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Save"
valign = 1

[node name="Load6" type="TextureButton" parent="Options/LoadButtons"]
editor/display_folded = true
margin_left = 576.0
margin_top = 300.0
margin_right = 726.0
margin_bottom = 350.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
index = 5

[node name="Label" type="Label" parent="Options/LoadButtons/Load6"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Save"
valign = 1

[node name="Load7" type="TextureButton" parent="Options/LoadButtons"]
editor/display_folded = true
margin_left = 576.0
margin_top = 350.0
margin_right = 726.0
margin_bottom = 400.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
index = 6

[node name="Label" type="Label" parent="Options/LoadButtons/Load7"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Save"
valign = 1

[node name="Load8" type="TextureButton" parent="Options/LoadButtons"]
editor/display_folded = true
margin_left = 576.0
margin_top = 400.0
margin_right = 726.0
margin_bottom = 450.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
index = 7

[node name="Label" type="Label" parent="Options/LoadButtons/Load8"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Save"
valign = 1

[node name="DeleteButton" type="TextureButton" parent="Options/LoadButtons"]
editor/display_folded = true
margin_left = 576.0
margin_right = 726.0
margin_bottom = 50.0
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}
index = -1

[node name="Label" type="Label" parent="Options/LoadButtons/DeleteButton"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Delete"
valign = 1

[node name="Tween" type="Tween" parent="Options/LoadButtons"]
script = ExtResource( 11 )
index = -1

[node name="ColorButtons" type="Node2D" parent="Options"]
position = Vector2( 50, 50 )
script = ExtResource( 12 )

[node name="Color1" type="TextureButton" parent="Options/ColorButtons"]
margin_left = 576.0
margin_right = 726.0
margin_bottom = 50.0
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}
r_t = 0.506
g_t = 0.506
b_t = 0.506
r_b = 0.855
g_b = 0.855
b_b = 0.855

[node name="Label" type="Label" parent="Options/ColorButtons/Color1"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Default"
valign = 1

[node name="Color2" type="TextureButton" parent="Options/ColorButtons"]
margin_left = 576.0
margin_top = 50.0
margin_right = 726.0
margin_bottom = 100.0
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}
r_t = 0.329
g_t = 0.478
b_t = 0.51
r_b = 0.243
g_b = 0.675
b_b = 0.659

[node name="Label" type="Label" parent="Options/ColorButtons/Color2"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Blue"
valign = 1

[node name="Color3" type="TextureButton" parent="Options/ColorButtons"]
margin_left = 576.0
margin_top = 100.0
margin_right = 726.0
margin_bottom = 150.0
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}
r_t = 0.996
g_t = 0.808
b_t = 0.659
r_b = 0.6
g_b = 0.722
b_b = 0.596

[node name="Label" type="Label" parent="Options/ColorButtons/Color3"]
margin_right = 150.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Green"
valign = 1

[node name="Tween" type="Tween" parent="Options/ColorButtons"]
script = ExtResource( 11 )
index = -1

[node name="RowCounter" type="Node2D" parent="Options"]
position = Vector2( 0, 1374 )
script = ExtResource( 14 )

[node name="Per" type="Node2D" parent="Options/RowCounter"]
editor/display_folded = true
position = Vector2( 144, -230 )

[node name="PerRow" type="Label" parent="Options/RowCounter/Per"]
margin_left = -62.0
margin_right = 62.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "St/R"
align = 1
valign = 1

[node name="PerIncrease" type="TextureButton" parent="Options/RowCounter/Per"]
margin_top = 136.0
margin_right = 50.0
margin_bottom = 186.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/RowCounter/Per/PerIncrease"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "+"
align = 1
valign = 1

[node name="PerDecrease" type="TextureButton" parent="Options/RowCounter/Per"]
margin_left = -50.0
margin_top = 136.0
margin_bottom = 186.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/RowCounter/Per/PerDecrease"]
margin_right = 50.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "-"
align = 1
valign = 1

[node name="PerDisplay" type="Label" parent="Options/RowCounter/Per"]
margin_left = -20.0
margin_top = 75.0
margin_right = 14.0
margin_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "56"
align = 1
valign = 1
script = ExtResource( 16 )

[node name="Row" type="Node2D" parent="Options/RowCounter"]
position = Vector2( 432, -230 )

[node name="Row" type="Label" parent="Options/RowCounter/Row"]
margin_left = -62.0
margin_right = 62.0
margin_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Rows"
align = 1
valign = 1

[node name="RowIncrease" type="TextureButton" parent="Options/RowCounter/Row"]
margin_top = 136.0
margin_right = 50.0
margin_bottom = 186.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/RowCounter/Row/RowIncrease"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "+"
align = 1
valign = 1

[node name="RowDecrease" type="TextureButton" parent="Options/RowCounter/Row"]
margin_left = -50.0
margin_top = 136.0
margin_bottom = 186.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Options/RowCounter/Row/RowDecrease"]
margin_right = 50.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "-"
align = 1
valign = 1

[node name="RowDisplay" type="Label" parent="Options/RowCounter/Row"]
margin_left = -20.0
margin_top = 75.0
margin_right = 14.0
margin_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "56"
align = 1
valign = 1
script = ExtResource( 17 )

[node name="Progress" type="Node2D" parent="Options/RowCounter"]
position = Vector2( 0, -108 )
script = ExtResource( 18 )

[node name="Label" type="Label" parent="Options/RowCounter/Progress"]
margin_left = 354.0
margin_top = -233.0
margin_right = 510.0
margin_bottom = -153.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "0/?"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="Options/RowCounter"]

[node name="Main" type="Node2D" parent="."]
z_index = -1

[node name="StitchDisplay" type="TextureButton" parent="Main"]
margin_left = 138.0
margin_top = 230.0
margin_right = 438.0
margin_bottom = 480.0
script = ExtResource( 19 )

[node name="Label" type="Label" parent="Main/StitchDisplay"]
margin_right = 300.0
margin_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 20 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "0"
align = 1
valign = 1

[node name="StitchIncreaseButton" type="TextureButton" parent="Main"]
margin_left = 288.0
margin_top = 480.0
margin_right = 455.0
margin_bottom = 681.0

[node name="Label" type="Label" parent="Main/StitchIncreaseButton"]
margin_right = 167.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "+"
align = 1
valign = 1

[node name="StitchDecreaseButton" type="TextureButton" parent="Main"]
margin_left = 121.0
margin_top = 480.0
margin_right = 288.0
margin_bottom = 681.0

[node name="Label" type="Label" parent="Main/StitchDecreaseButton"]
margin_right = 167.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "-"
align = 1
valign = 1

[node name="Reset" type="Node2D" parent="Main"]
script = ExtResource( 22 )

[node name="ResetButton" type="TextureButton" parent="Main/Reset"]
margin_left = 163.0
margin_top = 681.0
margin_right = 413.0
margin_bottom = 761.0
script = ExtResource( 23 )

[node name="Label" type="Label" parent="Main/Reset/ResetButton"]
margin_right = 250.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.505882, 0.505882, 0.505882, 1 )
text = "Reset"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="Main/Reset/ResetButton"]

[node name="Tween" type="Tween" parent="Main/Reset"]
[connection signal="pressed" from="Options/OptionsButton" to="Options" method="OptionsPressed"]
[connection signal="text_entered" from="Options/SaveButtons/SaveName" to="Options" method="FileSaved"]
[connection signal="pressed" from="Options/AdditionalOptions/SaveButton" to="Options" method="SavePressed"]
[connection signal="pressed" from="Options/AdditionalOptions/LoadButton" to="Options" method="LoadPressed"]
[connection signal="pressed" from="Options/AdditionalOptions/ColorButton" to="Options" method="ColorPressed"]
[connection signal="pressed" from="Options/AdditionalOptions/RowCounterButton" to="Options" method="RowCountPressed"]
[connection signal="pressed" from="Options/LoadButtons/Load1" to="Options/LoadButtons/Load1" method="LoadPressed"]
[connection signal="pressed" from="Options/LoadButtons/Load2" to="Options/LoadButtons/Load2" method="LoadPressed"]
[connection signal="pressed" from="Options/LoadButtons/Load3" to="Options/LoadButtons/Load3" method="LoadPressed"]
[connection signal="pressed" from="Options/LoadButtons/Load4" to="Options/LoadButtons/Load4" method="LoadPressed"]
[connection signal="pressed" from="Options/LoadButtons/Load5" to="Options/LoadButtons/Load5" method="LoadPressed"]
[connection signal="pressed" from="Options/LoadButtons/Load6" to="Options/LoadButtons/Load6" method="LoadPressed"]
[connection signal="pressed" from="Options/LoadButtons/Load7" to="Options/LoadButtons/Load7" method="LoadPressed"]
[connection signal="pressed" from="Options/LoadButtons/Load8" to="Options/LoadButtons/Load8" method="LoadPressed"]
[connection signal="pressed" from="Options/LoadButtons/DeleteButton" to="Options" method="DeletePressed"]
[connection signal="pressed" from="Options/ColorButtons/Color1" to="Options/ColorButtons/Color1" method="ColorPressed"]
[connection signal="pressed" from="Options/ColorButtons/Color2" to="Options/ColorButtons/Color2" method="ColorPressed"]
[connection signal="pressed" from="Options/ColorButtons/Color3" to="Options/ColorButtons/Color3" method="ColorPressed"]
[connection signal="pressed" from="Options/RowCounter/Per/PerIncrease" to="Options/RowCounter" method="StitchPerRowIncrease"]
[connection signal="pressed" from="Options/RowCounter/Per/PerDecrease" to="Options/RowCounter" method="StitchPerRowDecrease"]
[connection signal="pressed" from="Options/RowCounter/Row/RowIncrease" to="Options/RowCounter" method="RowIncrease"]
[connection signal="pressed" from="Options/RowCounter/Row/RowDecrease" to="Options/RowCounter" method="RowDecrease"]
[connection signal="pressed" from="Main/StitchDisplay" to="." method="StitchIncrease"]
[connection signal="pressed" from="Main/StitchIncreaseButton" to="." method="StitchIncrease"]
[connection signal="pressed" from="Main/StitchDecreaseButton" to="." method="StitchDecrease"]
[connection signal="button_down" from="Main/Reset/ResetButton" to="Main/Reset/ResetButton" method="ResetPressed"]
[connection signal="timeout" from="Main/Reset/ResetButton/Timer" to="Main/Reset/ResetButton" method="TimerTimeout"]
